--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-	"name": "fcc-learn-npm-package-json",
-  "author": "Rajat Gupta", 
+	"name": "npm-tut",
+	"author": "Rajat Gupta",
+  "description": "This is a tutorial for backend in nodejs",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
-	"main": "server.js",
+	"start": "node server.js",
 	"scripts": {
 		"start": "node server.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://idontknow/todo.git"
 	}
 }
