--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "npm-tut",
 	"author": "Rajat Gupta",
   "description": "This is a tutorial for backend in nodejs",
+  "keywords": [ "node.js", "express", "mongoDB","npm" ],
 	"dependencies": {
 		"express": "^4.14.0"
 	},
