--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
 	"name": "npm-tut",
+	"version": "1.0.0",
 	"author": "Rajat Gupta",
-  "description": "This is a tutorial for backend in nodejs",
-  "keywords": [ "node.js", "express", "mongoDB","npm" ],
+	"description": "This is a tutorial for backend in nodejs",
+	"keywords": [
+		"node.js",
+		"express",
+		"mongoDB",
+		"npm"
+	],
+	"license": "MIT",
 	"dependencies": {
-		"express": "^4.14.0"
+		"express": "^4.17.1",
+		"moment": "^2.14.0"
 	},
 	"start": "node server.js",
 	"scripts": {
