--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"express": "^4.17.1",
-		"moment": "2.10.2"
+		"moment": "~2.10.2"
 	},
 	"start": "node server.js",
 	"scripts": {
