--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
 	],
 	"license": "MIT",
 	"dependencies": {
-		"express": "^4.17.1",
-		"moment": "^2.10.2"
+		"express": "^4.17.1"
 	},
 	"start": "node server.js",
 	"scripts": {
