--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
-	"name": "npm-tut",
-	"version": "1.0.0",
-	"author": "Rajat Gupta",
-	"description": "This is a tutorial for backend in nodejs",
-	"keywords": [
-		"node.js",
-		"express",
-		"mongoDB",
-		"npm",
-		"freecodecamp"
-	],
-	"license": "MIT",
+	"name": "fcc-learn-node-with-express",
+	"version": "0.1.0",
 	"dependencies": {
-		"express": "^4.17.1"
+		"express": "^4.14.0",
+		"body-parser": "^1.15.2",
+		"cookie-parser": "^1.4.3",
+		"fcc-express-bground": "https://github.com/freeCodeCamp/fcc-express-bground-pkg.git"
 	},
+	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
 	}
