--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-	"name": "npm-tut",
-	"description": "This is a tutorial for backend in nodejs",
+	"name": "mern-app",
+	"description": "This is a tutorial for mren app",
 	"version": "1.0.0",
-	"author": "Rajat Gupta",
-	"license": "MIT",
-	"keywords": [
-		"node.js",
-		"express",
-		"mongoDB",
-		"npm",
-		"freecodecamp"
-	],
 	"scripts": {
 		"start": "node server.js"
 	},
+	"author": "Rajat Gupta",
+	"license": "MIT",
+	"keywords": [
+		"reactjs",
+		"nodejs",
+		"express",
+		"mongoDB"
+	],
 	"dependencies": {
-		"body-parser": "^1.19.0",
-		"express": "^4.17.1"
+		"express": "^4.17.1",
+		"mongodb": "^3.6.9",
+		"mongoose": "^5.12.13"
 	},
 	"devDependencies": {
 		"dotenv": "^10.0.0"
