--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"description": "This is a tutorial for mren app",
 	"version": "1.0.0",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"test": "jest"
 	},
 	"author": "Rajat Gupta",
 	"license": "MIT",
