--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 		"mongoose": "^5.12.13"
 	},
 	"devDependencies": {
-		"dotenv": "^10.0.0"
+		"dotenv": "^10.0.0",
+		"jest": "^27.0.6",
+		"react-test-renderer": "^17.0.2"
 	}
 }
