--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
-	"name": "mern-app",
-	"description": "This is a tutorial for mren app",
-	"version": "1.0.0",
-	"scripts": {
-		"start": "node server.js",
-		"test": "jest"
-	},
-	"author": "Rajat Gupta",
-	"license": "MIT",
-	"keywords": [
-		"reactjs",
-		"nodejs",
-		"express",
-		"mongoDB"
-	],
-	"dependencies": {
-		"express": "^4.17.1",
-		"mongodb": "^3.6.9",
-		"mongoose": "^5.12.13"
-	},
-	"devDependencies": {
-		"dotenv": "^10.0.0",
-		"jest": "^27.0.6",
-		"react-test-renderer": "^17.0.2"
-	}
+  "name": "mern-app",
+  "version": "1.0.0",
+  "description": "This is a mern stack based app.",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rajatgupta24/mern-app.git"
+  },
+  "keywords": [
+    "nodejs",
+    "reactjs",
+    "express",
+    "mongoDB"
+  ],
+  "author": "Rajat Gupta",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/rajatgupta24/mern-app/issues"
+  },
+  "homepage": "https://github.com/rajatgupta24/mern-app#readme",
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.13.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.9"
+  }
 }
